# heartwood-ledger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  ledger_app.toml
.cargo/: config.toml
.github/workflows/: ci.yml
host/: Cargo.toml
host/.cargo/: config.toml
host/src/: main.rs
scripts/: e2e.sh
src/: approvals.rs  crypto.rs  identity.rs  main.rs  seed.rs  sign_path.rs  ui.rs
